--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
+    "immutable": "^3.8.1",
+    "redux-immutable": "^3.0.9",
     "tag-loader": "^0.3.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
